@@ -1,178 +1,80 @@
 package com.backend_tingeso.demo.config;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
-import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.oauth2.jwt.Jwt;
-import org.springframework.security.oauth2.jwt.JwtDecoder;
-import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Arrays;
 
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
+    //Variables leidas desde app.properties
+    @Value("${cors.allowed-origins}")
+    private String allowedOrigins;
 
-    private static final Logger log = LoggerFactory.getLogger(SecurityConfig.class);
-    private final String jwkSetUri = "https://toolrent.duckdns.org/keycloak/realms/toolrent/protocol/openid-connect/certs";
+    @Value("${cors.allowed-methods}")
+    private String allowedMethods;
 
-    @Bean
-    public JwtDecoder jwtDecoder() {
-        return NimbusJwtDecoder.withJwkSetUri(jwkSetUri).build();
-    }
+    @Value("${cors.allowed-headers}")
+    private String allowedHeaders;
+
+    @Value("${cors.allow-credentials}")
+    private boolean allowCredentials;
+
+    @Value("${cors.max-age}")
+    private long maxAge;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                .cors(Customizer.withDefaults())
                 .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        // Endpoints que requieren rol específico
-                        .requestMatchers("/api/v1/admin/**").hasRole("ADMIN")
-                        .requestMatchers("/api/v1/empleado/**").hasRole("EMPLEADO")
-                        .requestMatchers("/api/v1/tools", "/api/v1/tools/**").authenticated()
-                        .requestMatchers("/api/v1/loans", "/api/v1/loans/**").authenticated()
-                        .requestMatchers("/api/v1/customers", "/api/v1/customers/**").authenticated()
-                        .requestMatchers("/api/v1/kardex", "/api/v1/kardex/**").authenticated()
-                        .requestMatchers("/api/v1/fee", "/api/v1/fee/**").authenticated()
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        // 1. Liberar Swagger para que no pida token
+                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html").permitAll()
+
+                        // 2. Proteger tus endpoints
+                        .requestMatchers("/api/v1/tools/**").authenticated()
+
+                        // 3. Cualquier otra cosa requiere login
                         .anyRequest().authenticated()
                 )
-                .oauth2ResourceServer(oauth2 -> oauth2
-                        .jwt(jwt -> jwt.jwtAuthenticationConverter(this::convertRoles))
-                )
-                .exceptionHandling(ex -> ex
-                        .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
-                );
+                // 4. Configurar como Resource Server (para validar tokens de Keycloak)
+                .oauth2ResourceServer(oauth2 -> oauth2.jwt(Customizer.withDefaults()));
 
         return http.build();
     }
 
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173","https://toolrent.duckdns.org"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+
+        // Parsear orígenes permitidos desde variable de entorno
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        configuration.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
+        configuration.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
+        configuration.setAllowCredentials(allowCredentials);
+        configuration.setMaxAge(maxAge);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 
-    private AbstractAuthenticationToken convertRoles(Jwt jwt) {
-        try {
-            log.debug("Converting JWT roles. Subject: {}", jwt.getSubject());
-            Collection<GrantedAuthority> authorities = extractAuthorities(jwt);
-            log.debug("Extracted authorities: {}", authorities);
-            return new JwtAuthenticationToken(jwt, authorities);
-        } catch (Exception e) {
-            log.error("Error converting roles: ", e);
-            return new JwtAuthenticationToken(jwt, Collections.emptyList());
-        }
-    }
 
-    private Collection<GrantedAuthority> extractAuthorities(Jwt jwt) {
-        Collection<GrantedAuthority> authorities = new ArrayList<>();
 
-        try {
-            log.info("=== EXTRACTING AUTHORITIES ===");
 
-            // Log todos los claims disponibles
-            jwt.getClaims().forEach((key, value) -> {
-                log.info("Claim '{}': {}", key, value);
-            });
 
-            // Roles de realm (estructura estándar de Keycloak)
-            Map<String, Object> realmAccess = jwt.getClaimAsMap("realm_access");
-            if (realmAccess != null) {
-                log.info("realm_access found: {}", realmAccess);
-                if (realmAccess.containsKey("roles")) {
-                    List<String> realmRoles = (List<String>) realmAccess.get("roles");
-                    log.info("Realm roles: {}", realmRoles);
-                    authorities.addAll(realmRoles.stream()
-                            .filter(role -> !role.startsWith("default-roles-") && !role.equals("offline_access") && !role.equals("uma_authorization"))
-                            .map(role -> {
-                                String authority = "ROLE_" + role.toUpperCase();
-                                log.info("Adding authority: {}", authority);
-                                return new SimpleGrantedAuthority(authority);
-                            })
-                            .collect(Collectors.toList()));
-                }
-            } else {
-                log.info("No realm_access found");
-            }
-
-            // También verificar si hay roles directos
-            List<String> directRoles = jwt.getClaimAsStringList("roles");
-            if (directRoles != null) {
-                log.info("Direct roles: {}", directRoles);
-                authorities.addAll(directRoles.stream()
-                        .map(role -> {
-                            String authority = "ROLE_" + role.toUpperCase();
-                            log.info("Adding direct authority: {}", authority);
-                            return new SimpleGrantedAuthority(authority);
-                        })
-                        .collect(Collectors.toList()));
-            } else {
-                log.info("No direct roles found");
-            }
-
-            // Verificar roles en resource_access - AQUÍ ESTABA EL ERROR
-            Map<String, Object> resourceAccess = jwt.getClaimAsMap("resource_access");
-            if (resourceAccess != null) {
-                log.info("resource_access found: {}", resourceAccess);
-                resourceAccess.forEach((client, clientData) -> {
-                    log.info("Client '{}': {}", client, clientData);
-                    if (clientData instanceof Map) {
-                        Map<String, Object> clientMap = (Map<String, Object>) clientData;
-                        if (clientMap.containsKey("roles")) {
-                            List<String> clientRoles = (List<String>) clientMap.get("roles");
-                            log.info("Client '{}' roles: {}", client, clientRoles);
-
-                            // AQUÍ ESTABA EL PROBLEMA - FALTABA AGREGAR LOS ROLES A AUTHORITIES
-                            authorities.addAll(clientRoles.stream()
-                                    .map(role -> {
-                                        String authority = "ROLE_" + role.toUpperCase();
-                                        log.info("Adding client authority: {}", authority);
-                                        return new SimpleGrantedAuthority(authority);
-                                    })
-                                    .collect(Collectors.toList()));
-                        }
-                    }
-                });
-            } else {
-                log.info("No resource_access found");
-            }
-
-            log.info("Final extracted authorities: {}", authorities);
-
-        } catch (Exception e) {
-            log.error("Error extracting authorities from JWT", e);
-        }
-
-        return authorities;
-    }
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
 }
